syntax = "proto3";

package statspb;

option go_package = "go_optional_tech/proto/statspb";

message Empty {}

message StatItem {
  string key = 1;
  int64 value = 2;
}

message StatsResponse {
  repeated StatItem items = 1;
}

message RecentResponse {
  repeated string events = 1;
}

service StatsService {
  rpc GetStats(Empty) returns (StatsResponse);
  rpc GetRecent(Empty) returns (RecentResponse);
}
